# telegram-stars-starter

./: .env_sample  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
